Fix an issues with the settings dropdown being overlapped by the tasks iframe, caused by the "Boomerang for Gmail" extension.

--- a/src/gmail-righttasks.css
+++ b/src/gmail-righttasks.css
@@ -85,3 +85,9 @@
 	box-sizing: border-box;
 }
 
+/* Fix issue with the settings dropdown being under the tasks sidebar,
+ * caused by Boomerang extension.
+ */
+div.dw {
+	z-index: 2;
+}
